@@ -1,0 +1,8 @@
+CORE
+multiple_top_level_modules.v
+
+activate-multi-line-match
+^multiple modules found, please select one:\n  moduleA\n  moduleB$
+^EXIT=1$
+^SIGNAL=0$
+--
