@@ -1,0 +1,5 @@
+module moduleA;
+endmodule
+
+module moduleB;
+endmodule
