@@ -1,6 +1,6 @@
 CORE broken-smt-backend
 nor2.sv
-
+--top main
 ^\[main\.nor_ok\] always !main\.nor_in1 == main\.nor_out: PROVED .*$
 ^\[main\.nor_is_reduction_nor\] always ~\|\{ main\.nor_in1 \} == main\.nor_out: PROVED .*$
 ^EXIT=0$
